k8s/api/viken.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fint-betaling-backend
  name: fint-betaling-backend

spec:
  ports:
    - port: 8080
  type: ClusterIP
  selector:
    app: fint-betaling-backend
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-betaling-backend
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`betaling-viken2.felleskomponent.no`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: fint-betaling-backend
          port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fint-betaling-backend
spec:
  selector:
    matchLabels:
      app: fint-betaling-backend
  template:
    metadata:
      labels:
        app: fint-betaling-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: fint-betaling-backend
          image: fintlabsacr.azurecr.io/fint-betaling-backend:dummy
          resources:
            limits:
              memory: "5Gi"
              cpu: "2"
            requests:
              memory: "2Gi"
              cpu: "250m"
          ports:
            - containerPort: 8080
